# python-fastapi-hex-todo

./: .coveragerc  .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  python-fastapi-hex-todo.code-workspace
scripts/: __init__.py
scripts/pgsql-db/: init_db.sql
tests/factories/: entitiy_factories.py  model_factories.py  providers.py  utils.py
tests/integration/api/: conftest.py
tests/integration/api/routers/: root_test.py
tests/integration/api/routers/account/: auth_test.py  conftest.py
tests/integration/api/routers/todo/: conftest.py
tests/integration/infra/database/repositories/: conftest.py  todo_item_repository_test.py  user_repository_test.py
tests/integration/interfaces/fastapi/: conftest.py
tests/unit/: conftest.py
tests/unit/config/: environment_test.py
tests/unit/core/: conftest.py
tests/unit/core/accounts/: conftest.py
tests/unit/core/todo/: conftest.py
tests/unit/domains/todo/: conftest.py
tests/unit/todolist/config/: environment_test.py
tests/utils/: __init__.py  auth.py  database.py
todolist/: __init__.py  __main__.py
todolist/api/: __init__.py  app.py  container.py  root.py
todolist/api/account/: __init__.py  user.py
todolist/api/routers/: __init__.py  root.py
todolist/api/routers/account/: auth.py  user.py
todolist/api/routers/todo/: todo_item.py
todolist/api/todo/: todo_item.py
todolist/config/: environment.py  inject.py
todolist/core/accounts/entities/: user.py
todolist/core/accounts/protocols/: __init__.py  user_repo.py
todolist/core/accounts/services/: exceptions.py  hash_service.py  user_service.py
todolist/core/todo/entities/: todo_item.py
todolist/core/todo/protocols/: __init__.py  todo_item_repo.py
todolist/core/todo/services/: todo_item_service.py
todolist/domain/entities/: todo_item.py
todolist/domain/services/todo_item_service/: create_one_todo_item.py
todolist/domains/todo/entities/: todo_item.py
todolist/domains/todo/services/: todo_item_service.py
todolist/domains/todos/entities/: todo_item.py
todolist/infra/database/: seeds.py  sqlalchemy.py
todolist/infra/database/alembic/: README  env.py
todolist/infra/database/models/: __init__.py  todo_item.py  user.py
todolist/infra/database/repositories/: todo_item_repository.py  user_repository.py
todolist/interfaces/fastapi/: __init__.py  app.py
todolist/interfaces/fastapi/api/: root.py
todolist/interfaces/fastapi/todo/: todo_item.py
(+49 files in other folders)
